# airflow-test

./: .gitignore  pyproject.toml
dags/: dags.python_operator.py  dags_bash_operator.py  dags_python_import_func.py  dags_python_operator.py  dags_python_show_templates.py  dags_python_task_decorator.py  dags_python_task_decorator_opargs.py  dags_python_task_decorator_opargs2.py  dags_python_templates.py  dags_python_templates2.py  dags_python_templates3.py
plugins/common/: common_func.py
