[tool.poetry]
name = "airflow-test"
version = "0.1.0"
description = ""
authors = ["강재호 <jhkang@illunex.com>"]
readme = "README.md"
packages = [{include = "airflow_test"}]

[tool.poetry.dependencies]
python = "3.8.17"
apache-airflow = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
